Segmentation fault with edit mode operation #70187

Closed
opened 2019-09-23 19:05:12 +02:00 by Rey Leonard M. Amorato · 10 comments

System Information
Operating system: Linux-5.0.0-29-generic-x86_64-with-Ubuntu-19.04-disco 64 Bits
Graphics card: Radeon RX 580 Series (POLARIS10, DRM 3.33.0, 5.0.0-29-generic, LLVM 8.0.0) X.Org 4.5 (Core Profile) Mesa 19.0.8

Blender Version
Broken: version: 2.81 (sub 12), branch: master, commit date: 2019-09-23 15:03, hash: 2713921e8a
Worked: 2.81 (sub 8), branch: master (modified), commit date: 2019-09-08 16:45, hash: 7ab936c5b9

Short description of error
Segmentation fault

Exact steps for others to reproduce the error
With the default cube, enter edit mode and try to merge vertices with Alt+M
Options At Center; At Cursorand Collapse crashes Blender

blender.crash.txt

**System Information** Operating system: Linux-5.0.0-29-generic-x86_64-with-Ubuntu-19.04-disco 64 Bits Graphics card: Radeon RX 580 Series (POLARIS10, DRM 3.33.0, 5.0.0-29-generic, LLVM 8.0.0) X.Org 4.5 (Core Profile) Mesa 19.0.8 **Blender Version** Broken: version: 2.81 (sub 12), branch: master, commit date: 2019-09-23 15:03, hash: `2713921e8a` Worked: 2.81 (sub 8), branch: master (modified), commit date: 2019-09-08 16:45, hash: `7ab936c5b9` **Short description of error** Segmentation fault **Exact steps for others to reproduce the error** With the default cube, enter edit mode and try to merge vertices with Alt+M Options *At Center*; *At Cursor*and *Collapse* crashes Blender [blender.crash.txt](https://archive.blender.org/developer/F7772355/blender.crash.txt)

Added subscriber: @RL

Added subscriber: @RL
Member

Added subscribers: @fclem, @Jeroen-Bakker, @lichtwerk

Added subscribers: @fclem, @Jeroen-Bakker, @lichtwerk
Member

Looks like a crash in the GPU driver.

@RL : I assume you tested this with File → Defaults → Load Factory Settings?
@Jeroen-Bakker, @fclem: does this ring a bell?

Looks like a crash in the GPU driver. @RL : I assume you tested this with File → Defaults → Load Factory Settings? @Jeroen-Bakker, @fclem: does this ring a bell?
Member

Mesa 19.0.8 is really flaky. @RL Can you update to the latest drivers of your distribution?
I am able to reproduce this on a machine here. Will investigate in more depth what the actual issue in the driver is.

Mesa 19.0.8 is really flaky. @RL Can you update to the latest drivers of your distribution? I am able to reproduce this on a machine here. Will investigate in more depth what the actual issue in the driver is.
Member

With the --debug-gpu-force-workarounds it does not crash for me.
I will see what workaround is needed and enable this one for this specific configuration.

With the `--debug-gpu-force-workarounds` it does not crash for me. I will see what workaround is needed and enable this one for this specific configuration.

@lichtwerk Yes, this is with Factory Settings.
@Jeroen-Bakker I believe 19.0.8 is the latest for Ubuntu 19.04... Trying 19.3 using a PPA caused my Desktop to fall into a login loop.
No crash with --debug-gpu-force-workarounds too.

Upon further testing, it seems it crashes when the mesh does not have enough vertices to sustain a face.

@lichtwerk Yes, this is with Factory Settings. @Jeroen-Bakker I believe 19.0.8 is the latest for Ubuntu 19.04... Trying 19.3 using a PPA caused my Desktop to fall into a login loop. No crash with `--debug-gpu-force-workarounds` too. Upon further testing, it seems it crashes when the mesh does not have enough vertices to sustain a face.

Added subscriber: @nokipaike

Added subscriber: @nokipaike

^___^
guys, I've been trying for weeks to tell you that AMD GPUs work better on linux with workarounds

https://developer.blender.org/rBd0c772f68b84267e15630064fc21cc54fc7209f0#246612

I await debugging those fluorescent and inverted lights (on my gpu)
otherwise I am forced to use blender with half the performance on linux

^___^ guys, I've been trying for weeks to tell you that AMD GPUs work better on linux with workarounds https://developer.blender.org/rBd0c772f68b84267e15630064fc21cc54fc7209f0#246612 I await debugging those fluorescent and inverted lights (on my gpu) otherwise I am forced to use blender with half the performance on linux

This issue was referenced by f8da7218be

This issue was referenced by f8da7218be130b26eccc33df2ba78004509e4b82
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Jeroen Bakker self-assigned this 2019-09-25 15:58:32 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#70187
No description provided.