Fix T70187: GPU Driver: Merge Vertices Crashes ATI/Linux/OpenSource

This has been tested with 18.2.2, 19.0.8 and 19.3.0~develop.

Reviewed By: fclem

Differential Revision: https://developer.blender.org/D5886