source/blender/gpu/intern/gpu_extensions.c
@@ -401,6 +401,12 @@ void gpu_extensions_init(void)
       GG.context_local_shaders_workaround = true;
     }
   }
+  else if ((GG.device == GPU_DEVICE_ATI) && (GG.os == GPU_OS_UNIX) &&
+           (GG.driver == GPU_DRIVER_OPENSOURCE)) {
+    /* See T70187: merging vertices fail. This has been tested from 18.2.2 till 19.3.0~dev of the
+     * Mesa driver */
+    GG.unused_fb_slot_workaround = true;
+  }
 
   GPU_invalid_tex_init();
 }
